add new element using a function

--- a/Array/array.html
+++ b/Array/array.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Array Array Arry</h1>
+    <button onclick="myFunction()">Click Here</button>
+    <h3 id="Lemon"></h3>
     <script src="array.js"></script>
 </body>
 </html>
