sorting array numbers Numerically and Alphabetically

--- a/Array/array.html
+++ b/Array/array.html
@@ -10,6 +10,9 @@
     <h1>Array Array Arry</h1>
     <button onclick="myFunction()">Click Here</button>
     <h3 id="Lemon"></h3>
+    <button onclick ="myFunction1()">Sort Alphabetically</button>
+    <button onclick ="myFunction2()">Sort Numerically</button>
+    <p id="sorting"></p>
     <script src="array.js"></script>
 </body>
 </html>
