Rain Posibility wraped up for now

--- a/Task1_WTF/wtf.html
+++ b/Task1_WTF/wtf.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="wtf.js"></script>
+    <script src="rainposibility.js"></script>
 </body>
 </html>
