coolestdays, hottestdays, merge in one file(wtf.js)

--- a/Task1_WTF/wtf.html
+++ b/Task1_WTF/wtf.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="rainposibility.js"></script>
-    <script src="hotday.js"></script>
+    <script src="wtf.js"></script>
 </body>
 </html>
